--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,5 @@
 body {
-
+    background: #1e1f24;
     color: #333;
 
 
@@ -16,8 +16,12 @@ body {
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
 
+}
+
+#cabecera #logo {
+    width: 20px;
 }
 
 #cabecera #tagline {
@@ -40,5 +44,6 @@ body {
 }
 
 #post {
+    background: white;
     padding: 1em;
 }
